Version 0.98.1 - Plus and minus buttons for TT property editing fixed. - Corrected handling of the timing shift when enabling subtitles. - Fullscreen should work now on webkit based browsers.

--- a/http/res/css/watch_style.css
+++ b/http/res/css/watch_style.css
@@ -272,6 +272,8 @@
 	height: 2rem;
 }
 .cue-window-config button {
+	padding: 2px;
+	border: solid 1px rgb(60, 60, 60);
 	background: rgba(50, 50, 50, 0.8);
 }
 .cue-window-config button:hover {
